--- a/01_LLM_Basics.ipynb
+++ b/01_LLM_Basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMyHMqelRMFujvsvF2Vzndn",
+      "authorship_tag": "ABX9TyMgvXsQKLHngrw08Y9c4G2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2446,33 +2446,13 @@
       "cell_type": "code",
       "source": [
         "from google.colab import userdata\n",
-        "sec_key = userdata.get('HF_TOKEN')\n",
-        "sec_key"
+        "sec_key = userdata.get('HF_TOKEN')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "ER4LqqvTZ8nT",
-        "outputId": "cfded725-b6b0-4c1b-bede-a9a7dd86b960"
+        "id": "ER4LqqvTZ8nT"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'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'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2482,7 +2462,7 @@
       "metadata": {
         "id": "RDHHcM6famvE"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2494,7 +2474,7 @@
       "metadata": {
         "id": "r8SeVwlxbViB"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2510,7 +2490,7 @@
         "id": "vZ3kds6xcCl-",
         "outputId": "d162aa72-55c8-476d-869d-84cb7da1c5c5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2546,7 +2526,7 @@
         "id": "NsbgPJXlcaN9",
         "outputId": "b1236906-f41a-4c5b-bcf3-1fdfa0f8d33c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2571,7 +2551,7 @@
       "metadata": {
         "id": "zCYrKsCxcii8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2584,7 +2564,7 @@
       "metadata": {
         "id": "bkjGB4dbc4A0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2600,7 +2580,7 @@
         "id": "sUuDH93wdJ47",
         "outputId": "7ce727c2-b46c-4e6c-88a9-a5123b358b31"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2623,7 +2603,7 @@
         "id": "AFStzOZQdYb_",
         "outputId": "f56a3555-a89d-40d8-895b-0285b618a11b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2648,7 +2628,7 @@
         "id": "qHqXZ8tBdhfC",
         "outputId": "f187260b-da46-4ae1-e95a-58c3045f3d71"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2682,7 +2662,7 @@
       "metadata": {
         "id": "ZbbG2o-ndk77"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2779,7 +2759,7 @@
         "id": "omDHpqOJeftu",
         "outputId": "bbbbeb2c-0011-4272-d72c-4c12383fde6c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2898,7 +2878,7 @@
       "metadata": {
         "id": "Iaa2KjLPeugO"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2913,7 +2893,7 @@
         "id": "zW6ryFsRfQe0",
         "outputId": "3e937cd5-46f0-4c70-f2e8-cfbc4852a5e6"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2940,7 +2920,7 @@
         "id": "WDFkeg8_f4yZ",
         "outputId": "b456553e-6170-4f65-8b30-fe57767b32eb"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2979,7 +2959,7 @@
         "id": "raFesqH8f93U",
         "outputId": "6fa292fb-44ee-4ef6-c487-05dc00bddf39"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2998,7 +2978,7 @@
       "metadata": {
         "id": "wb5t1N--gn7B"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3015,7 +2995,7 @@
         "id": "rqu3RaBkg5n8",
         "outputId": "179e14be-1260-4988-8321-6c06aead07ae"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
